--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     },
     "dependencies": {
         "crypto-js": "^4.1.1",
+        "primeicons": "^6.0.1",
+        "primereact": "^9.2.0",
         "wouter": "^2.10.0"
     }
 }
